--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     }
   },
   "dependencies": {
+    "cordova-android": "^5.0.0",
     "cordova-browser": "~5.0.1",
     "cordova-ios": "^4.5.4",
-    "cordova-plugin-network-information": "~1.3.4",
-    "cordova-android": "~6.3.0"
+    "cordova-plugin-network-information": "~1.3.4"
   }
 }
