testing/trying to solve no permission bug

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "ios"
     ],
     "plugins": {
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-geolocation": {}
     }
   },
   "dependencies": {
