--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     ],
     "plugins": {
       "cordova-plugin-network-information": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-android-permissions": {}
     }
   },
   "dependencies": {
     "cordova-android": "^5.0.0",
     "cordova-browser": "~5.0.1",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-network-information": "~1.3.4"
   }
 }
