--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "plugins": {
       "cordova-plugin-network-information": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova.plugins.diagnostic": {}
     }
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "cordova-browser": "~5.0.1",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-android-permissions": "^1.0.0",
-    "cordova-plugin-network-information": "~1.3.4"
+    "cordova-plugin-network-information": "~1.3.4",
+    "cordova.plugins.diagnostic": "^3.7.2"
   }
 }
