--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "cordova": {
     "platforms": [
       "browser",
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-network-information": {},
@@ -21,6 +21,7 @@
     "cordova-ios": "^4.5.4",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-network-information": "~1.3.4",
-    "cordova.plugins.diagnostic": "^3.7.2"
+    "cordova.plugins.diagnostic": "^3.7.2",
+    "cordova-plugin-geolocation": "~3.0.0"
   }
 }
