--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     }
   },
   "dependencies": {
-    "cordova-android": "^6.3.0",
+    "cordova-android": "^6.4.0",
     "cordova-browser": "~5.0.1",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-network-information": "~1.3.4",
-    "cordova.plugins.diagnostic": "^3.7.2",
-    "cordova-plugin-geolocation": "~3.0.0"
+    "cordova.plugins.diagnostic": "^3.7.2"
   }
 }
