--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-geolocation": {},
       "cordova-plugin-android-permissions": {},
-      "cordova.plugins.diagnostic": {}
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-dialogs": {}
     }
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "cordova-browser": "~5.0.1",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-network-information": "~1.3.4",
     "cordova.plugins.diagnostic": "^3.7.2"
