--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-android-permissions": {},
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "com.github.michael79bxl.numberDialog": {}
     }
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-network-information": "~1.3.4",
+    "cordova-plugin-number-dialog": "^0.2.2",
     "cordova.plugins.diagnostic": "^3.7.2"
   }
 }
