--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       "cordova-plugin-android-permissions": {},
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-dialogs": {},
-      "com.github.michael79bxl.numberDialog": {}
+      "cordova-plugin-pin-dialog": {}
     }
   },
   "dependencies": {
@@ -22,10 +22,11 @@
     "cordova-browser": "~5.0.1",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-android-permissions": "^1.0.0",
-    "cordova-plugin-dialogs": "^1.3.4",
+    "cordova-plugin-dialogs": "git+https://github.com/apache/cordova-plugin-dialogs.git",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-network-information": "~1.3.4",
     "cordova-plugin-number-dialog": "^0.2.2",
+    "cordova-plugin-pin-dialog": "git+https://github.com/Paldom/PinDialog.git",
     "cordova.plugins.diagnostic": "^3.7.2"
   }
 }
